--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "main": "background.js",
   "dependencies": {
+    "bootstrap": "^5.0.0-beta1",
     "core-js": "^3.6.5",
     "eslint-loader": "^2.1.2",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^4.0.0-0",
+    "vue3-material-design-icons": "^5.0.2"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
@@ -36,6 +39,7 @@
     "electron": "^11.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
+    "eslint-config-i-am-meticulous": "^12.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
