--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue3-material-design-icons": "^5.0.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.0.5",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jquery": "^3.5.5",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
