📦 NEW: Create categories route and setup pouchdb

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "./src/common/typedefs"
     ],
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "pouchdb-browser"
     ],
     "paths": {
       "@/*": [
