--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/pouchdb-browser": "^6.1.3",
     "bootstrap": "^5.0.0-beta1",
     "core-js": "^3.6.5",
     "eslint-loader": "^2.1.2",
     "jquery": "^3.5.1",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "moment": "^2.29.1",
+    "pouchdb-browser": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "vue3-material-design-icons": "^5.0.2"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.5",
