📦 NEW: Create dialog component for categories form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     ],
     "types": [
       "webpack-env",
-      "pouchdb-browser"
+      "pouchdb-browser",
+      "bootstrap/dist/js/bootstrap.bundle"
     ],
     "paths": {
       "@/*": [
