--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     ],
     "types": [
       "webpack-env",
-      "pouchdb-browser",
-      "bootstrap/dist/js/bootstrap.bundle"
+      "pouchdb-browser"
     ],
     "paths": {
       "@/*": [
