--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.0.0-beta1",
     "core-js": "^3.6.5",
     "eslint-loader": "^2.1.2",
+    "fullname": "^4.0.1",
     "jquery": "^3.5.1",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "moment": "^2.29.1",
