--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "@types/pouchdb-browser": "^6.1.3",
+    "apexcharts": "^3.26.0",
     "bootstrap": "^5.0.0-beta1",
     "core-js": "^3.6.5",
     "eslint-loader": "^2.1.2",
@@ -26,7 +27,10 @@
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-month-picker": "^1.4.0",
+    "vue-router": "^4.0.0-0",
+    "vue3-apexcharts": "^1.2.1",
+    "vue3-datepicker": "^0.2.4"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.5",
